<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GreetingActivity">

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/layout_greeting"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="50dp"
      android:text="@string/start_editing"
      android:textSize="32sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@id/actionPickImageFromFile"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/actionPickImageFromFile"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:text="@string/pick_from_file"
      android:textStyle="bold"
      app:cornerRadius="20dp"
      app:icon="@drawable/ic_picture"
      app:iconGravity="textTop"
      app:iconSize="64dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintDimensionRatio="h,1:1.5"
      app:layout_constraintEnd_toStartOf="@id/actionTakePhoto"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/layout_greeting" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/actionTakePhoto"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:text="@string/take_photo"
      android:textStyle="bold"
      app:cornerRadius="20dp"
      app:icon="@drawable/ic_camera"
      app:iconGravity="textTop"
      app:iconSize="64dp"
      app:layout_constraintBottom_toBottomOf="@id/actionPickImageFromFile"
      app:layout_constraintDimensionRatio="h,1:1.5"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintStart_toEndOf="@id/actionPickImageFromFile"
      app:layout_constraintTop_toTopOf="@id/actionPickImageFromFile" />

  <com.google.android.material.textview.MaterialTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_name"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>